# Diploma-Project

./: .env.example  .gitignore  PRD.md  README.md  docker-compose.yml  go.mod  go.sum
docker/grafana/dashboards/: chainorchestra.json  simulator.json
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docs/: api-reference.md  architecture.md  demo-scenarios.md  error-codes.md  integration-tests.md  mcp-tools.md  observability.md  typed-tools.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: layout.tsx
frontend/src/components/: ActivityFeed.tsx  AuthGuard.tsx  ChatPanel.tsx  LiveIndicator.tsx  PlanPanel.tsx  QueryProvider.tsx  Sidebar.tsx  Topbar.tsx  TrackingTimeline.tsx
frontend/src/lib/: api-hooks.ts  api.ts  format.ts  query-client.ts  roles.ts  toast.ts  types.ts  use-analytics.ts  use-audit-trace.ts  use-carriers.ts  use-chat-socket.ts  use-dashboard.ts  use-notifications.ts  use-orders.ts  use-products.ts  use-realtime-stream.ts  use-shipments.ts  use-simulator.ts  use-stock.ts  use-users.ts  use-warehouses.ts
frontend/src/stores/: auth.ts
internal/pkg/audit/: audit.go
internal/pkg/auth/: jwt.go  jwt_test.go
internal/pkg/httpresponse/: llm_error.go  llm_error_test.go  response.go  response_test.go  validators.go
internal/pkg/middleware/: bodysize.go  cors.go  logging.go  metrics.go  metrics_test.go  middleware_test.go  recovery.go  requestid.go  usercontext.go  usercontext_test.go
internal/pkg/nats/: client.go  client_test.go  event.go  event_test.go
mcp-host/: Dockerfile  auth.py  budget.py  config.py  context_store.py  llm.py  loop_guard.py  main.py  mcp_client.py  models.py  observability.py  plan_store.py  pyproject.toml  rbac.py
mcp-host/tests/: test_auth.py  test_budget.py  test_context_store.py  test_llm.py  test_loop_guard.py  test_main.py  test_mcp_client.py  test_models.py  test_observability.py  test_plan_endpoints.py  test_plan_store.py  test_rbac.py  test_streaming.py  test_tool_retry.py
mcp-orchestrator/: Dockerfile  config.py  http_client.py  main.py  pyproject.toml  types_mcp.py
mcp-orchestrator/tests/: test_tools.py  test_typed_validators.py
mcp-orchestrator/tools/: analytics_tools.py  inventory_tools.py  logistics_tools.py  notifications_tools.py  orders_tools.py  simulator_tools.py  users_tools.py
scripts/: demo-runner.sh  e2e-auth-test.sh  e2e-test.sh  e2e-ws-test.py  migrate-mcp-docstrings.py  realism-phase2.sql  realism-phase3.sql  realism-rebalance.sql  regression-audit-fixes.sh  run-integration-tests.sh  seed.sh  strip-comments.py
services/analytics-service/: Dockerfile
services/api-gateway/: Dockerfile
services/inventory-service/: Dockerfile
services/logistics-service/: Dockerfile
services/notification-service/: Dockerfile
services/order-service/: Dockerfile
services/simulator-service/: Dockerfile
services/user-service/: Dockerfile
tests/integration/: conftest.py  test_audit_trace.py  test_correlation_trace.py  test_llm_chat_flow.py  test_order_full_lifecycle.py  test_rate_limit_and_loop.py  test_shipment_postal_pipeline.py  test_simulator_admin.py  test_sse_realtime.py  test_typed_validation.py
(+158 files in other folders)
