[project]
name = "mcp-host"
version = "0.1.0"
description = "MCP Host: WebSocket chat endpoint with Gemini LLM and MCP tool execution"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "google-genai>=1.0.0",
    "mcp>=1.0.0",
    "PyJWT>=2.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "logfire[fastapi,httpx]>=2.0.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
mcp-host = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "auth.py",
    "budget.py",
    "config.py",
    "context_store.py",
    "llm.py",
    "loop_guard.py",
    "mcp_client.py",
    "models.py",
    "observability.py",
    "plan_store.py",
    "rbac.py",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
