[project]
name = "mcp-orchestrator"
version = "0.1.0"
description = "MCP Server with FastMCP tool definitions for supply chain management"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-orchestrator = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
include = ["main.py", "config.py", "http_client.py"]
